force-app/main/default/objects/Repeater_Component__mdt/Repeater_Component__mdt.object-meta.xml
<CustomObject>
    <label>Repeater Component</label>
    <pluralLabel>Repeater Components</pluralLabel>
</CustomObject>