force-app/main/default/objects/Repeater_Component__mdt/fields/Attribute_10_Name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_10_Name__c</fullName>
    <description>Name of the design attribute to populate.</description>
    <label>Attribute 10 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>