force-app/main/default/objects/Repeater_Component__mdt/fields/Attribute_10_Value__c.field-meta.xml
<CustomField>
    <fullName>Attribute_10_Value__c</fullName>
    <description>Value of the design attribute to populate.</description>
    <label>Attribute 10 Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>