force-app/main/default/objects/Repeater_Component__mdt/fields/Attribute_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_1_Name__c</fullName>
    <description>Name of design attribute to populate</description>
    <label>Attribute 1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>