force-app/main/default/objects/Repeater_Component__mdt/fields/Attribute_1_Type__c.field-meta.xml
<CustomField>
    <fullName>Attribute_1_Type__c</fullName>
    <description>Data type of the design attribute to populate.</description>
    <label>Attribute 1 Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>String</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>JSON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>