force-app/main/default/objects/Repeater_Component__mdt/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <description>This type is specific to c:lightningInput. when you have Repeater component name = c:lightningInput than make sure to fill the field component type</description>
    <inlineHelpText>This type is specific to c:lightningInput. when you have Repeater component name = c:lightningInput than make sure to fill the field component type</inlineHelpText>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>checkbox</fullName>
            </value>
            <value>
                <fullName>checkbox-button</fullName>
            </value>
            <value>
                <fullName>color</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>datetime-local</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>month</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>password</fullName>
            </value>
            <value>
                <fullName>radio</fullName>
            </value>
            <value>
                <fullName>range</fullName>
            </value>
            <value>
                <fullName>tel</fullName>
            </value>
            <value>
                <fullName>time</fullName>
            </value>
            <value>
                <fullName>toggle</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
            <value>
                <fullName>week</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>