force-app/main/default/objects/Repeater_Component__mdt/fields/Display_Rank__c.field-meta.xml
<CustomField>
    <fullName>Display_Rank__c</fullName>
    <description>Used to sort the query for components to render in ascending order by rank.</description>
    <label>Display Rank</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>