force-app/main/default/objects/Repeater_Component__mdt/validationRules/Component_Validate.validationRule-meta.xml
<ValidationRule>
    <fullName>Component_Validate</fullName>
    <active>true</active>
    <description>This validation rule check the input value of component_name__c to c:lightningInput. when you have Repeater component name = c:lightningInput than make sure to fill the field component type</description>
    <errorConditionFormula>LOWER(Component_Name__c  ) = LOWER(&#39;c:lightningInput&#39;)  &amp;&amp;   ISPICKVAL(Component_Type__c, &#39;&#39;)</errorConditionFormula>
    <errorMessage>Component Type is required for Generic Compoent c:lightningInput</errorMessage>
</ValidationRule>