force-app/main/default/objects/Repeater_Component__mdt/listViews/All_Mapping.listView-meta.xml
<ListView>
    <fullName>All_Mapping</fullName>
    <columns>DeveloperName</columns>
    <columns>Component_Name__c</columns>
    <columns>Group_Name__c</columns>
    <columns>Attribute_1_Name__c</columns>
    <columns>Attribute_1_Type__c</columns>
    <columns>Attribute_1_Value__c</columns>
    <columns>Attribute_2_Name__c</columns>
    <columns>Attribute_2_Value__c</columns>
    <columns>Attribute_3_Name__c</columns>
    <columns>Attribute_3_Value__c</columns>
    <columns>Attribute_4_Name__c</columns>
    <columns>Attribute_4_Value__c</columns>
    <columns>Attribute_5_Name__c</columns>
    <columns>Display_Rank__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mapping</label>
</ListView>